--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ requests>=2.23.0
 scipy>=1.4.1
 torch>=1.8.0
 torchvision>=0.9.0
-tqdm>=4.64.0 # progress bars
-psutil # system utilization
-py-cpuinfo # display CPU info
-thop>=0.1.1 # FLOPs computation
+tqdm>=4.64.0
+psutil
+py-cpuinfo
+thop>=0.1.1
 pandas>=1.1.4
-seaborn>=0.11.0 # plotting
+seaborn>=0.11.0
